--- a/force-app/main/default/lwc/displayTableHeader/displayTableHeader.html
+++ b/force-app/main/default/lwc/displayTableHeader/displayTableHeader.html
@@ -1,8 +1,10 @@
 <template>
     <thead>
-        <tr>
-            <th for:each={dataTableHeader} for:item="column" key={column.index}>
-                {column}
+        <tr class="slds-line-height_reset">
+            <th class="" scope="col" for:each={dataTableHeader} for:item="column" key={column.index}>
+                <div class="slds-truncate" title={column}>
+                    {column}
+                </div>
             </th>
         </tr>
     </thead>
